2009-02-14  Erik de Castro Lopo  <erikd AT mega-nerd DOT com>

    * src/common.h src/samplerate.c
    Add new error value SRC_ERR_SINC_PREPARE_DATA_BAD_LEN.

    * src/common.h
    Add WARN_UNUSED macro.

    * src/src_sinc.c
    Fix a segfault which occurs when memcpy is passed a bad length parameter.
    This bug has zero security implications beyond the ability to cause a
    program hitting this bug to exit immediately with a segfault.
    See : http://www.mega-nerd.com/erikd/Blog/2009/Feb/14/index.html
    Thanks to David Cournapeau and Lev Givon for the bug report.

    * doc/win32.html Makefile.am configure.ac
    Reinstate Win32/MSVC compile instructions.

    * doc/*.html
    Update for new release.

    * configure.ac
    Verison 0.1.7.

2009-02-13  Erik de Castro Lopo  <erikd AT mega-nerd DOT com>

    * src/common.h src/samplerate.c
    Fix SRC_ERR_BAD_SRC_RATIO error string. Thanks David Cournapeau.

2009-01-30  Erik de Castro Lopo  <erikd AT mega-nerd DOT com>

    * src/src_sinc.c
    Replace C99 "variable length arrays" with arrays allocated on the heap so
    that libsamplerate can be compiled with crappy compilers like MSVC.

2009-01-27  Erik de Castro Lopo  <erikd AT mega-nerd DOT com>

    * configure.ac NEWS README doc/*.html
    Updates for 0.1.6 release.

2009-01-12  Erik de Castro Lopo  <erikd AT mega-nerd DOT com>

    * tests/termination_test.c
    Fix termination test error on x86_64. Error probably due to difference in
    rounding.

2009-01-11  Erik de Castro Lopo  <erikd AT mega-nerd DOT com>

    * doc/win32.html
    Update win32 compile instructions to explain that this release cannot be
    compiled using the microsoft compiler.

    * NEWS README doc/*.html
    Updates for 0.1.5 release.

    * Makefile.am configure.ac
    Remove Win32 directory from distributed tarball.

2008-12-16  Erik de Castro Lopo  <erikd AT mega-nerd DOT com>

    * tests/multi_channel_test.c tests/multichan_throughput_test.c