@@ -1,0 +1,4 @@
+## Process this file with automake to produce Makefile.in
+
+EXTRA_DIST = add_cflags.m4 endian.m4
+
